<resources>
    <string name="app_name">GymBuddies</string>
    <!-- Strings related to login -->
    <string name="prompt_username">enter user name</string>
    <string name="prompt_password">enter password</string>
    <string name="action_sign_in">Login In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_login">Log In</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_link">Already onboard?</string>
    <string name="sign_up_title">LOGIN</string>
    <string name="enter_username">username</string>
    <string name="enter_email">email</string>
    <string name="enter_mobile_number">contact</string>
    <string name="enter_password">password</string>
    <string name="positive_button">LOGIN</string>
    <string name="negative_button">CLOSE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_branch">BranchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_gyms">Gyms</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_share">Share</string>
    <string name="menu_request">Other</string>

    <string name="empty_string"> </string>
    <string name="list_branches">show branches</string>

    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="contact">Contact</string>
    <string name="find_match">buddy up</string>
    <string name="show_branch">show branch</string>
    <string name="hide_branch">hide branch</string>
    <string name="show_on_map">show on map</string>
    <string name="message">chat</string>
    <string name="view_profile">view profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_intro">Intro</string>
    <string name="view_username">Username</string>
    <string name="view_profile_title">SHOWING USER DETAILS</string>
    <string name="view_profile_like">LIKE</string>
    <string name="request_button_accept">ACCEPT</string>
    <string name="request_button_reject">REJECT</string>
    <string name="enter_bio">bio</string>
    <string name="camera_click">camera</string>
    <string name="upload_click">upload</string>
    <string name="todo">TODO</string>
    <string name="message_body">hi %s, we matched through the app. Let\'s talk and proceed with our workout routine.</string>
    <string name="communicate">Communicate</string>
    <string name="dp">dp</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="supporting_text">supporting_text</string>
    <string name="secondary_text">secondary_text</string>
    <string name="title">title</string>
    <string name="request_gym">%s, %s</string>
    <string name="intro_tick">intro_tick</string>
    <string name="transform">TRANSFORM</string>
    <string name="your_life">Your life</string>
    <string name="your_life_sub">Meet new people who are as driven as you are</string>
    <string name="create">CREATE</string>
    <string name="your_connections">Your connections</string>
    <string name="your_connections_sub">Meet new people who achieve their goals and start a routine with them</string>
    <string name="partner">PARTNER</string>
    <string name="your_partner">Your fitness goals</string>
    <string name="your_partner_sub">Find the best partner near you to achieve your goals</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="left">left</string>
    <string name="upload">upload</string>
    <string name="loginT">Login</string>
    <string name="signup">SIGNUP</string>
    <string name="create_account">Create Account</string>

</resources>
