<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_gyms" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_matches"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_chats"
            android:title="@string/menu_chats" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_request"
                android:title="@string/menu_request" />
        </menu>
    </item>

</menu>
