<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gyms">

    <fragment
        android:id="@+id/nav_gyms"
        android:name="com.example.gym.buddies.ui.profile.ui.gyms.GymsFragment"
        android:label="@string/menu_gyms"
        tools:layout="@layout/fragment_gyms" >
        <action
            android:id="@+id/action_nav_gyms_to_nav_matches"
            app:destination="@id/nav_matches" />
        <action
            android:id="@+id/action_nav_gyms_to_nav_requests"
            app:destination="@id/nav_requests" />
        <action
            android:id="@+id/action_nav_gyms_to_nav_friends"
            app:destination="@id/nav_friends" />
    </fragment>

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.example.gym.buddies.ui.profile.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_gyms" >
        <action
            android:id="@+id/action_nav_matches_to_nav_gyms"
            app:destination="@id/nav_gyms" />
    </fragment>

    <fragment
        android:id="@+id/nav_requests"
        android:name="com.example.gym.buddies.ui.profile.ui.requests.RequestFragment"
        android:label="@string/menu_requests"
        tools:layout="@layout/fragment_gyms" >
        <action
            android:id="@+id/action_nav_requests_to_nav_gyms"
            app:destination="@id/nav_gyms" />
    </fragment>

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.gym.buddies.ui.profile.ui.friends.FriendFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_gyms" >
        <action
            android:id="@+id/action_nav_friends_to_nav_gyms"
            app:destination="@id/nav_gyms" />
    </fragment>

</navigation>