<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/branch_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    app:cardBackgroundColor="@color/main_background"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <TextView
        android:id="@+id/branch_locality"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/locality"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color" />

    <TextView
        android:id="@+id/branch_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:text="@string/city"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color" />

    <TextView
        android:id="@+id/branch_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="90dp"
        android:text="@string/contact"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color" />

    <TextView
        android:id="@+id/branch_value_locality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:text="@string/empty_string"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorLink="@color/all_text_color" />

    <TextView
        android:id="@+id/branch_value_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:text="@string/empty_string"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorLink="@color/all_text_color" />

    <TextView
        android:id="@+id/branch_value_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="90dp"
        android:text="@string/empty_string"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorLink="@color/all_text_color" />

    <Button
        android:id="@+id/find_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:gravity="center"
        android:text="@string/find_match" />
</androidx.cardview.widget.CardView>