<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_register"
    style=""
    android:background="@drawable/orange_shape_primary" >

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="81dp"
        android:layout_height="75dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/upload"
        android:onClick="takePicture"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855"
        app:srcCompat="@drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:shadowColor="#EEE3E3"
        android:text="@string/signup"
        android:textColor="@color/all_text_color"
        android:textColorLink="#0A0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture"
        app:layout_constraintVertical_bias="0.319" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.852">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_mobile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.825">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.795">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_bio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_bio"
        android:inputType="textMultiLine"
        android:textColor="@color/all_text_color"
        android:textColorHighlight="@color/all_text_color"
        android:textColorHint="@color/all_text_color"
        android:textColorLink="@color/all_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.768">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:shadowColor="#EEE3E3"
        android:text="@string/sign_up_link"
        android:textColor="@color/material_on_primary_emphasis_high_type"
        android:textColorLink="#0A0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_bio"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:shadowColor="#EEE3E3"
        android:text="@string/loginT"
        android:textColor="#A8070B27"
        android:textColorLink="#0A0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_bio"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/create_account"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_bio"
        app:layout_constraintVertical_bias="0.681" />
</androidx.constraintlayout.widget.ConstraintLayout>