<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/request_user_dp"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription=""
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars[2]" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/request_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/all_text_color"
                android:textColorHighlight="@color/all_text_color"
                android:textColorHint="@color/all_text_color" />

            <TextView
                android:id="@+id/request_gym_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/secondary_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/all_text_color"
                android:textColorHighlight="@color/all_text_color"
                android:textColorHint="@color/all_text_color" />

            <TextView
                android:id="@+id/request_user_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/supporting_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/all_text_color"
                android:textColorHighlight="@color/all_text_color"
                android:textColorHint="@color/all_text_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_user_accept_button"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/accept"
                android:textColor="@color/all_text_color"
                android:textColorHighlight="@color/all_text_color"
                android:textColorHint="@color/all_text_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_user_reject_button"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:textColor="@color/all_text_color"
                android:textColorHighlight="@color/all_text_color"
                android:textColorHint="@color/all_text_color" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>